k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: describe-it
  labels:
    app: describe-it
    environment: production
